tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index/expected.err
Error: invalid index on symbolic subscript array 'foo': use '.field' or '[.field]'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index/input.k65:6:5 ]
   │
 6 │     lda foo[idx]
   │     ──────┬─────  
   │           ╰─────── here
   │ 
   │ Help: did you mean '.idx'?
───╯
